# dotfiles

./: .gitignore  .gitmodules  README  im-garbage.el  init.el  init.org
X/: .Xauthority  .Xresources  .xinitrc
alacritty/.config/alacritty/: alacritty.toml
asound/: .asoundrc
awesome/.config/awesome/: rc.lua
bash/: .bash_profile  .bashrc
elpa/: evil-lisp-state-readme.txt
elpa/archives/melpa/: archive-contents
elpa/dash-20141008.712/: dash-autoloads.el
elpa/evil-20140910.441/: evil-autoloads.el  evil.info
elpa/goto-chg-20131228.1459/: goto-chg-autoloads.el
elpa/magit-90140908/: magit-autoloads.el  magit.info
emacs/.emacs.d/: .mc-lists.el  init.el  init.org  init.tex  tramp
emacs/.emacs.d/.emacs-backups/: !home!dallas!.ido.last~  !home!dallas!Documents!cs349!hnna!humans.tex~  !home!dallas!Documents!infosec!findings.org~  !home!dallas!Documents!mythology!11-4-14-lec_notes.org~
eshell/: history
git/: .gitconfig
irssi/.irssi/: config
prezto/: .zlogout  .zpreztorc
screen/: .screenrc
spacemacs/: .spacemacs
termite/.config/termite/: config
tmux/: .tmux.conf
vim/: .vimrc
x11/: .xinitrc  .xmodmap
xmobar/: .xmobarrc
xmonad/.config/xmonad/: .ghc.environment.x86_64-linux-9.4.8  build  hie.yaml  package.yaml  stack.yaml  xmonad-config.cabal  xmonad-with-config.cabal  xmonad.hs
xmonad/.config/xmonad/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
xmonad/.xmonad/: #xmonad.org#  xmonad.errors  xmonad.hi  xmonad.hs  xmonad.org
zsh/: .zlogout  .zpreztorc  .zshenv  .zshrc
(+88 files in other folders)
